20 June 2004 Sylvain Pion
- Replace "CGAL_NTS gcd" by "CGAL::gcd", since we know the type is int
  (allows to define CGAL_NTS as empty)

18 Feb 2004 Sylvain Pion
- Added missing this-> required by g++ 3.4.

0.4 (6 Feb 2004)
-Added lines
  typedef CGAL::Tag_false Has_sqrt;
  typedef CGAL::Tag_true  Has_division;

0.3  (18 Jan 2004)
- Remove CGAL_CFG_MATCHING_BUG_2.

0.2  (18 Jan 2004)
- Renamed CGAL_TEMPLATE_NULL to "template <>".

0.1  26 Nov. 2003 [rursu]
- Created the package Polynomial moving files from Nef_2 package