@@ -1,3 +1,7 @@
+2 September 2004 Menelaos Karavelas
+- Polynomial : added the new number type traits tags Has_exact_division,
+  Has_exact_sqrt, Has_exact_ring_operations
+
 20 June 2004 Sylvain Pion
 - Replace "CGAL_NTS gcd" by "CGAL::gcd", since we know the type is int
   (allows to define CGAL_NTS as empty)
